updated images // iOS bug still present with cropper

--- a/TestingMyProfilePicture/src/app/home/home.page.scss
+++ b/TestingMyProfilePicture/src/app/home/home.page.scss
@@ -78,6 +78,8 @@
 .igFeedPost > img {
   flex: 1 0 33%;
   margin: 5px;
+  height: 200px;
+  width: 200px;
 }
 
 .igBottomBar {
